--- a/app/templates/StudentModule/StudentDashboard.html
+++ b/app/templates/StudentModule/StudentDashboard.html
@@ -11,7 +11,7 @@
     <div class="icon-container">
         <form action="{{ url_for('main.logout') }}" method="POST" id="logout-form" style="display: inline;">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-            <button type="submit" class="logout-btn">
+            <button type="submit" class="logout-btn" onclick="confirmLogout()">
                 <i class="fa-solid fa-arrow-right-from-bracket"></i> Log Out
             </button>
         </form>
@@ -30,7 +30,7 @@
             <p>Student Navigation Panel</p>
             <ul>
                 <li><i class="fa-solid fa-house" style="color: #6F251B;" class = "active"></i>
-                    <a href="{{url_for('main.student_dashboard')}}">Dashboard</a></li>
+                    <a href="{{ url_for('main.student_dashboard') }}">Dashboard</a></li>
                 <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i>
                     <a href="">Attendance Records</a></li>
                 <li><i class="fa-solid fa-book" style="color:#6F251B;"></i>
@@ -42,53 +42,54 @@
             </ul>
         </div>
         <div class="main-content">
-                <h1>Welcome</h1>
-                <div class="personal-info">
-                    <h2>Student Information</h2>
+            <h1>Welcome</h1>
+            <div class="personal-info">
+                <h2>Student Information</h2>
                 <div class="profile-info">
                     <img src="student.jpg" alt="">
                     <div class="student-details">
-                        <p><strong>Student Name : Tatiana Omolleh</strong></p>
-                        <p><strong>ID Number : 149225</strong></p>
-                        <p><strong>Course : BICS</strong></p>
-                        <p><strong>Current Year : 3</strong></p>
+                        <p><strong>Student Name : {{ student.full_name }}</strong></p>
+                        <p><strong>ID Number : {{ student.admission_number }}</strong></p>
+                        <p><strong>Course : {{ student.course }}</strong></p>
+                        <p><strong>Current Year : {{student.current_year}} </strong></p>
                     </div>
                 </div>
-            <section>
-                <div class="personal-info">
-                    <h2>Personal Information</h2>
-                    <table>
-                        <tr>
-                            <td><strong>Mobile Number:</strong></td>
-                            <td>07001111099</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Email Address (School):</strong></td>
-                            <td>tatiana.omolleh@strathmore.edu</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Email Address (Personal):</strong></td>
-                            <td>tatianaomolleh12@gmail.com</td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="academic-info">
-                    <h2>Academic Information</h2>
-                    <table>
-                        <tr>
-                            <td><strong>Intake:</strong></td>
-                            <td>2022</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Academic Status:</strong></td>
-                            <td>Active</td>
-                        </tr>
-                    </table>
-                </div>
-            </section>
-            <footer>
-                <p>&copy; 2024</p>
-            </footer>
+                <section>
+                    <div class="personal-info">
+                        <h2>Personal Information</h2>
+                        <table>
+                            <tr>
+                                <td><strong>Mobile Number:</strong></td>
+                                <td>{{ student.mobile_number }}</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Email Address (School):</strong></td>
+                                <td>{{ student.email }}</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Email Address (Personal):</strong></td>
+                                <td>{{ student.personal_email }}</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="academic-info">
+                        <h2>Academic Information</h2>
+                        <table>
+                            <tr>
+                                <td><strong>Intake:</strong></td>
+                                <td>{{ student.year_intake }}</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Academic Status:</strong></td>
+                                <td>{{ student.education_status }}</td>
+                            </tr>
+                        </table>
+                    </div>
+                </section>
+                <footer>
+                    <p>&copy; 2024</p>
+                </footer>
+            </div>
         </div>
     </div>
 </body>
