--- a/app/templates/StudentModule/StudentDashboard.html
+++ b/app/templates/StudentModule/StudentDashboard.html
@@ -63,12 +63,8 @@
                                 <td>{{ student.mobile_number }}</td>
                             </tr>
                             <tr>
-                                <td><strong>Email Address (School):</strong></td>
-                                <td>{{ student.email }}</td>
-                            </tr>
-                            <tr>
                                 <td><strong>Email Address (Personal):</strong></td>
-                                <td>{{ student.personal_email }}</td>
+                                <td>{{student.email}}</td>
                             </tr>
                         </table>
                     </div>
@@ -81,7 +77,7 @@
                             </tr>
                             <tr>
                                 <td><strong>Academic Status:</strong></td>
-                                <td>{{ student.education_status }}</td>
+                                <td>{{ student.academic_status }}</td>
                             </tr>
                         </table>
                     </div>
