--- a/app/templates/AdminModule/AdminDashboard.html
+++ b/app/templates/AdminModule/AdminDashboard.html
@@ -35,7 +35,7 @@
                 <li><i class="fa-solid fa-house" style="color: #6F251B;" class = "active"></i>
                     <a href="{{url_for('main.admin_dashboard')}}">Admin Dashboard</a></li>
                 <li><i class="fa-regular fa-user" style="color: #6F251B"></i></i>
-                    <a href="{{url_for('main.register')}}">Register User Accounts</a></li>
+                    <a href="{{url_for('main.manageusers')}}">Manage User Accounts</a></li>
                 <li><i class="fa-solid fa-book" style="color:#6F251B;"></i>
                     <a href="">Manage Course Information</a></li>
                 <li><i class="fa-regular fa-bell" style="color:#6F251B;"></i></i>
