--- a/app/templates/AdminModule/AdminDashboard.html
+++ b/app/templates/AdminModule/AdminDashboard.html
@@ -37,7 +37,7 @@
                 <li><i class="fa-regular fa-user" style="color: #6F251B"></i></i>
                     <a href="{{url_for('main.manageusers')}}">Manage User Accounts</a></li>
                 <li><i class="fa-solid fa-book" style="color:#6F251B;"></i>
-                    <a href="">Manage Course Information</a></li>
+                    <a href="{{url_for('main.managecourseinfo')}}">Manage Course Information</a></li>
                 <li><i class="fa-regular fa-bell" style="color:#6F251B;"></i></i>
                     <a href="">View Alerts & Predictions</a></li>
                 <li><i class="fa-solid fa-money-bill" style="color:#6F251B;"></i>
